# TravelMate

./: .env.example  .gitignore  AGENTS.md  README.md  SETUP.md  TODO.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: cf1614e00238_initial.py
frontend/: index.html  node_modules  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: global-setup.ts
frontend/e2e/tests/: auth.spec.ts  trip.spec.ts
frontend/public/: manifest.json
frontend/src/: App.vue  db.ts  main.ts  style.css  sync.ts
frontend/src/api/: client.ts
frontend/src/components/: ActivityComments.vue  AppButton.vue  ConfirmModal.vue  ConflictResolver.vue  EmptyState.vue  ErrorState.vue  OfflineBanner.vue  POIManager.vue  PackingList.vue  PollCard.vue  QuickNote.vue  RoutePlanner.vue  SkeletonLoader.vue  ToastContainer.vue  TripMap.vue
frontend/src/composables/: useDarkMode.ts  usePhotoUpload.ts  useSwipe.ts  useToast.ts  useTripBudget.ts  useTripMembers.ts  useTripMemories.ts
frontend/src/hooks/: usePullToRefresh.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  trip.ts  ws.ts
frontend/src/types/: index.ts
frontend/src/utils/: trim.ts
frontend/src/views/: AdminView.vue  DashboardView.vue  (+6 more)
scripts/: seed_demo.py  seed_tokyo_trip.py
src/travelmate/: __init__.py  config.py  database.py  main.py  utils.py  ws.py
tests/: conftest.py  test_activities.py  test_auth.py  test_days.py  test_expenses.py  test_files.py  test_members.py  test_memories.py  test_pois.py  test_share.py  test_trips.py
(+49 files in other folders)
